<resources>
    <string name="app_name">KeepRunningDemo1</string>
    <string name="kilometer">公里</string>
    <string name="speed">配速</string>
    <string name="speed1">0655</string>
    <string name="duration">用时</string>
    <string name="calorie">卡路里</string>
    <string name="runninglevel">我的跑步等级</string>

    <string name="monday">一</string>
    <string name="tuseday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
</resources>
